Add new endpoint to retrieve a given student its teachers
